<resources>
    <string name="app_name">Loop</string>
    <string name="db_name">echo.realm</string>
    <string name="network_connected">Network is connect</string>
    <string name="text_permissons_rejected">permission(s) were previously rejected</string>
    <string name="text_allow_to_again">Allow to Ask Again</string>
    <string name="text_permissons_granted">Permission(s) has been granted!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_button">Reset</string>
    <string name="text_send_white_broard">Save</string>
    <string name="draw_chat_top_get">Whiteboard in use</string>
    <string name="draw_chat_bottom_get"></string>
    <string name="draw_chat_top_send">Whiteboard in use</string>
    <string name="draw_chat_bottom_send">Long push to cancel drawing</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="notification">Notification</string>
    <string name="register">Create new account</string>
    <string name="login_id">Log in ID</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="email">E-mail</string>
    <string name="back">Back</string>
    <string name="c_password">Confirm password</string>
    <string name="enter_login_id">Please enter login ID.</string>
    <string name="enter_password">Please enter new password.</string>
    <string name="error_message">Something went wrong ! Please try again later !</string>
    <string name="no_connection_message">Please check your network connection.</string>
    <string name="no_connection_title">No connection</string>
    <string name="ra_id">Your ID</string>
    <string name="ra_password">Your Password</string>
    <string name="ra_nickname">Nickname</string>
    <string name="ra_email">E-mail</string>
    <string name="ra_comment">Comment</string>
    <string name="ra_phone_number">Phone number</string>
    <string name="ra_terms_of_use">Terms of Service</string>
    <string name="ra_agree">I agree with the Terms of Service</string>
    <string name="ra_register">Register</string>
    <string name="ra_cancel">Back</string>
    <string name="ra_successfully_left_button_text">Check mail</string>
    <string name="ra_successfully_right_button_text">Back</string>
    <string name="ra_registration_completed_title">Registered successfully</string>
    <string name="ra_registration_completed_message">Registered successfully\nPlease enjoy your time with Loop!</string>
    <string name="deep_link_host">118.70.177.23</string>
    <string name="title_reset_password">Reset password</string>
    <string name="explain_reset_password">We will send an URL to reset your password to your email address.</string>
    <string name="email_address">Email address</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm password</string>
    <string name="request_reset">Send</string>
    <string name="reset">Send</string>
    <string name="title_time_line">Timeline</string>
    <string name="create_new_post">New post</string>
    <string name="liked_users">Liked users</string>
    <string name="comment">Comment</string>
    <string name="hide_post">Hide this post</string>
    <string name="block_user">Hide all posts from this user</string>
    <string name="report_post">Report</string>
    <string name="cancel">Cancel</string>
    <string name="title_report_post_dialog">Please let us know more about the reported post.</string>
    <string name="report_unsuitable">It is unpleasant.</string>
    <string name="report_spam">It is spam</string>
    <string name="successful_title">Success</string>
    <string name="successful_message">Successfully !</string>
    <string name="camera_wasnt_support">Your device does not support camera</string>
    <string name="body_content_error">Please enter content.</string>
    <string name="missing_arguments">Missing some arguments. </string>
    <string name="canceled">Canceled.</string>
    <string name="title_list_liked_users">Like</string>
    <string name="retry">Retry</string>
    <string name="message_confirm_hide_all_post">Hide all posts from this user?</string>
    <string name="title_confirm_hide_all_post">Hide</string>
    <string name="read_more">More</string>
    <string name="less">Less</string>
    <string name="error_data">Not data</string>
    <string name="title_details">Timeline</string>
    <string name="privacy_settings">Sharing setting</string>
    <string name="public_privacy">Public</string>
    <string name="friends_privacy">Friends</string>
    <string name="only_me_privacy">Only Me</string>
    <string name="title_more_fragment">Other</string>
    <string name="edit_profile">Edit profile</string>
    <string name="send_invitation_email">Invite friend</string>
    <string name="log_out">Log out</string>
    <string name="google_play_url">https://play.google.com/store/apps/details?id=</string>
    <string name="apple_store_url">https://itunes.apple.com/us/app/loop/id1154846674?ls=1&amp;mt=8</string>
    <string name="subject_invitation_email">Let\'s talk together in Loopchat!</string>
    <string name="content_email">%1$s has invited you to Free voice call, free chat application "Loop" \n
\nDownload\niPhone・iPad：\n%2$s\nAndroid:\n%3$s\n\nUsing Loop, you can not only send text messages, pictures, videos, but also can draw canvas and send them as they are!\n\n
To become friend with %1$s , please search for this ID below:\n
%4$s</string>
    <string name="change_background_image">Background</string>
    <string name="change_background_image_title">Change background</string>
    <string name="photography">Take picture</string>
    <string name="library">Library</string>
    <string name="sound">Sound</string>
    <string name="notification_sound">Notification sound</string>
    <string name="sound_default">Default</string>
    <string name="sound_chime_1">Chime 1</string>
    <string name="sound_chime_2">Chime 2</string>
    <string name="sound_spring">Spring</string>
    <string name="sound_chance">Chance</string>
    <string name="sound_flashing">Flashing</string>
    <string name="sound_limp">Limp</string>
    <string name="edit_profile_title">Edit profile</string>
    <string name="profile_title">Profile</string>
    <string name="block">Block</string>
    <string name="change_avatar">Avatar</string>
    <string name="id">ID</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="dscription">Description</string>
    <string name="update_profile">Save</string>
    <string name="change_password">Change Password</string>
    <string name="change_your_password">Change your password</string>
    <string name="current_password">Current password</string>
    <string name="new_change_password">New password</string>
    <string name="confirm_new_change_password">Confirm new password</string>
    <string name="notify_enter_current_password">Please enter password.</string>
    <string name="notify_enter_new_password">Please enter new password.</string>
    <string name="notify_password_confirm_mismatched">New password and confirm new password do not match.</string>
    <string name="change_avatar_title">Change Avatar\nChoose</string>
    <string name="take_picture_button">Take picture</string>
    <string name="choose_picture_button">Select from album</string>
    <string name="title_nothing_has_changed">Save failed</string>
    <string name="message_nothing_has_changed">You didn\'t edit any information, there is nothing to save.</string>
    <string name="un_friend">Delete from friendlist</string>
    <string name="timeline">Timeline</string>
    <string name="add_friend">Request friend</string>
    <string name="choise">Select</string>
    <string name="camera">Take picture</string>
    <string name="video">Record video</string>
    <string name="title_nickname_too_long">Nickname</string>
    <string name="message_nickname_too_long">Please enter nickname no longer than 32 characters.</string>
    <string name="enter_phone_number">Please enter phone number.</string>
    <string name="notify_new_password_mismatched">New password and confirm new password do not match.</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="enter_new_password">Please enter new password.</string>
    <string name="txtHintChat">New message</string>
    <string name="txt_send_chat">Send</string>
    <string name="flf_title">Chat</string>
    <string name="flf_add_friend">+ Friend</string>
    <string name="flf_create_group">+ Group</string>
    <string name="flf_sort">Display order</string>
    <string name="flf_pending">Waiting</string>
    <string name="flf_requesting">Requesting</string>
    <string name="flf_group">Group</string>
    <string name="flf_friend">Friend</string>
    <string name="flf_blocked">Block list</string>
    <string name="flf_block_user">Block</string>
    <string name="flf_accept_friend">Accept</string>
    <string name="flf_load_more">View more</string>
    <string name="flf_default_order">Default order</string>
    <string name="flf_history_chat">Conversation time order</string>
    <string name="flf_friend_time">Added time order</string>
    <string name="flf_cancel_requesting">Cancel request</string>
    <string name="flf_unblock">Unblock</string>
    <string name="flf_delete">Delete</string>
    <string name="flf_timeline">Timeline</string>
    <string name="flf_edit">Edit</string>
    <string name="flf_save">Save</string>
    <string name="flf_unfriend_message">Delete this friend?</string>
    <string name="flf_leave_room_message">Are you sure want to leave this group?</string>
    <string name="flf_message_type_image">A image was posted</string>
    <string name="flf_message_type_video">A video was posted</string>
    <string name="flf_message_type_whiteboard">A white board was drawn.</string>
    <string name="flf_id_or_phone_number">ID or phone number</string>
    <string name="flf_qr_code">QR code</string>
    <string name="flf_nearby_friends">Find nearby friends</string>
    <string name="flf_album_was_created">A new album was created.</string>
    <string name="flf_sent_a_sticker">Sent a sticker</string>
    <string name="flf_join_room" formatted="false">%s invited %s to the group.</string>
    <string name="flf_remove_member" formatted="false">%s deleted %s from the group.</string>
    <string name="flf_leave_room">%s left the group.</string>
    <string name="user_action_typing">is typing</string>
    <string name="remove_my_self">「Deleted message」</string>
    <string name="remove_friend">「Deleted message」</string>
    <string name="typing_editing">「Editing...」</string>
    <string name="typing">「...Typing...」</string>
    <string name="message_edit">Edit message</string>
    <string name="message_delete">Delete</string>
    <string name="message_copy">Copy</string>
    <string name="edited_message">Edited</string>
    <string name="sent_message">Sent</string>
    <string name="seen_message">Read</string>
    <string name="free_call">Free call</string>
    <string name="note">Note</string>
    <string name="album">Album</string>
    <string name="title_note">Note</string>
    <string name="edit_note">Edit note</string>
    <string name="delete_note">Delete note</string>
    <string name="content_confirm_delete_note">Are you sure to delete this Note?</string>
    <string name="total">Total</string>
    <string name="tabs1">Chat</string>
    <string name="tabs2">White board</string>
    <string name="tabs3">Timeline</string>
    <string name="tabs4">Other</string>
    <string name="gda_save">Save</string>
    <string name="gda_create_group">+ Group</string>
    <string name="gda_edit_group">Edit group</string>
    <string name="gda_change_avatar">Change avatar</string>
</resources>