<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- begin @buttons -->
    <RelativeLayout
        android:background="@color/gray"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <Button
            android:id="@+id/btn_add_friend"
            android:text="@string/flf_add_friend"
            android:textColor="@drawable/flf_selector_button_text_color"
            android:textSize="10sp"
            android:background="@color/transparent"
            android:button="@null"
            android:drawableTop="@drawable/flf_selector_btn_add_friend"
            android:minWidth="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_create_group"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/btn_add_friend"
            android:text="@string/flf_create_group"
            android:textColor="@drawable/flf_selector_button_text_color"
            android:textSize="10sp"
            android:background="@color/transparent"
            android:button="@null"
            android:drawableTop="@drawable/flf_selector_btn_create_group"
            android:minWidth="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flf_title"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="#ffffff"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sort"
            android:layout_alignParentRight="true"
            android:text="@string/flf_sort"
            android:tag="@string/flf_sort"
            android:layout_gravity="right"
            android:textColor="@drawable/flf_selector_button_text_color"
            android:textSize="10sp"
            android:background="@color/transparent"
            android:button="@null"
            android:drawableTop="@drawable/flf_selector_btn_sort"
            android:minWidth="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout><!-- end @buttons -->

    <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
        android:id="@+id/rcv_friend_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:recyclerviewClipToPadding="true"
        app:recyclerviewScrollbars="vertical" />
</LinearLayout>