<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/chat_selector_tooltip_background_message"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/txt_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/message_copy"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens14" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#e8e8e8" />

        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/message_delete"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens14" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#e8e8e8" />

        <TextView
            android:id="@+id/txt_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/message_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens14" />


    </LinearLayout>
</LinearLayout>