<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/exp_container"
    android:background="@drawable/flf_selector_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.marshalchen.ultimaterecyclerview.swipe.SwipeLayout
        android:id="@+id/recyclerview_swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top">

            <Button
                android:id="@+id/btn_edit"
                android:background="@drawable/flf_selector_btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/flf_edit"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btn_show_timeline"
                android:background="@drawable/flf_selector_btn_edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/flf_timeline"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btn_unfriend"
                android:background="@drawable/flf_selector_btn_delete"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/flf_delete"
                android:textColor="#ffffff" />
        </LinearLayout>

        <!-- begin @exp_content_wrapper -->
        <RelativeLayout
            android:id="@+id/exp_content_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:clickable="false"
            android:focusable="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="4dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- begin @main_content -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/iv_avatar"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        app:riv_mutate_background="true"
                        android:src="@drawable/ic_avatar_placeholder"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius="20dp"
                        app:riv_border_width="1dp"
                        app:riv_border_color="#cecece"
                        app:riv_oval="false"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/iv_avatar"
                        android:layout_toLeftOf="@+id/extra_information"
                        android:layout_marginLeft="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_name"
                            android:text="メンバーネーム"
                            android:textStyle="bold"
                            android:lines="1"
                            android:ellipsize="end"
                            android:textColor="#000000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tv_last_message"
                            android:text="最後のメッセージをプレビュー表示させま"
                            android:textSize="12sp"
                            android:lines="1"
                            android:ellipsize="end"
                            android:layout_marginTop="6dp"
                            android:textColor="#666666"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/extra_information"
                        android:orientation="vertical"
                        android:layout_alignParentRight="true"
                        android:gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_time"
                            android:text="00/00/00 00:00"
                            android:textSize="12sp"
                            android:textColor="#666666"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tv_total_unread"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:background="@drawable/flf_selector_tv_total_unread"
                            android:gravity="center"
                            android:text="11"
                            android:textColor="@color/white"
                            android:textSize="9sp"
                            android:visibility="visible" />
                    </LinearLayout>
                </RelativeLayout><!-- end @main_content -->

                <LinearLayout
                    android:id="@+id/optional_wrapper"

                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_nickname"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:padding="8dp"
                        android:textSize="12sp"
                        android:background="@drawable/flf_selector_txt_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btn_save_nickname"
                            android:layout_alignParentLeft="true"
                            android:text="@string/flf_save"
                            android:background="@drawable/flf_selector_btn_accept"
                            android:textSize="12sp"
                            android:textColor="#ffffff"
                            android:layout_width="74dp"
                            android:layout_height="28dp" />

                        <Button
                            android:id="@+id/btn_block_friend"
                            android:layout_centerInParent="true"
                            android:text="@string/flf_block_user"
                            android:background="@drawable/flf_selector_btn_accept"
                            android:textSize="12sp"
                            android:textColor="#ffffff"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_width="74dp"
                            android:layout_height="28dp" />

                        <Button
                            android:id="@+id/btn_cancel"
                            android:layout_alignParentRight="true"
                            android:text="@string/cancel"
                            android:background="@drawable/flf_selector_btn_accept"
                            android:textSize="12sp"
                            android:textColor="#ffffff"
                            android:layout_width="74dp"
                            android:layout_height="28dp" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout><!-- begin @exp_content_wrapper -->
    </com.marshalchen.ultimaterecyclerview.swipe.SwipeLayout>
</RelativeLayout>